# nectar-lang

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NECTAR.md  README.md
.github/workflows/: release.yml
comparison/: index.html
compiler/: Cargo.toml
compiler/src/: ast.rs  borrow_checker.rs  codegen.rs  const_fold.rs  critical_css.rs  dce.rs  devserver.rs  exhaustiveness.rs  formatter.rs  lexer.rs  linter.rs  lsp.rs  main.rs  module_loader.rs  module_resolver.rs  optimizer.rs  package.rs  parser.rs  registry.rs  resolver.rs  runtime_modules.rs  sourcemap.rs  ssr.rs  stdlib.rs  token.rs  tree_shake.rs  type_checker.rs  wasm_binary.rs  wasm_opt.rs
docs/: architecture.md  examples.md  getting-started.md  language-reference.md  runtime-api.md  toolchain.md
examples/: a11y.nectar  ai-chat.arc  animations.nectar  api.arc  app.arc  auth.nectar  clipboard.nectar  concurrency.nectar  contracts.nectar  counter.arc  crypto.nectar  database.nectar  dnd.nectar  embeds.nectar  error-handling.nectar  forms.nectar  hello.arc  observability.nectar  payments.nectar  pdf.nectar  pwa-app.nectar  realtime.nectar  responsive.nectar  security.nectar  seo.nectar  shortcuts.nectar  std-lib.nectar  store.arc  theming.nectar  time.nectar  todo.arc  uploads.nectar  virtual-list.nectar
runtime/: arc-hot-reload.js  arc-hydration.js  arc-runtime.js  arc-ssr-runtime.js  arc-test-renderer.js  arc-test-runner.js  nectar-runtime.js  nectar-service-worker.js
runtime/modules/: a11y.js  animate.js  auth.js  channel.js  clipboard.js  core.js  crypto.js  dnd.js  embed.js  loader.js  pdf.js  (+21 more)
